# operators

include/: infini_operators.h
include/ops/clip/: clip.h
include/ops/gather/: gather.h
include/ops/reduce_max/: reduce_max.h
include/ops/reduce_mean/: reduce_mean.h
include/ops/reduce_min/: reduce_min.h
include/ops/where/: where.h
operatorspy/: utils.py
operatorspy/tests/: CMakeLists.txt  clip.py  gather.py  max_pool.py  reduce_max.py  reduce_mean.py  reduce_min.py  test  where.py
src/ops/add/: operator.cc
src/ops/clip/: operator.cc
src/ops/clip/cpu/: clip_cpu.cc  clip_cpu.h  test  test.cc
src/ops/clip/cuda/: clip.cc  clip.cu  clip.cuh
src/ops/gather/: operator.cc
src/ops/gather/cpu/: gather_cpu.cc  gather_cpu.h  test  test.cc
src/ops/reduce/: operator.cc  reduce.h
src/ops/reduce/cpu/: reduce  reduce_cpu.cc  reduce_cpu.h  test_reduceMax  test_reduceMax.cc  testfp  testfp.cc
src/ops/reduce_max/: operator.cc
src/ops/reduce_mean/: operator.cc
src/ops/reduce_min/: operator.cc
src/ops/where/: operator.cc
src/ops/where/cpu/: where_cpu.cc  where_cpu.h
